# exercicios_codewars_python

./: Makefile  pyproject.toml  pytest.ini
codewars/: ex001.py  ex002.py  ex003.py  ex004.py  ex005.py  ex006.py  ex007.py  ex008.py  ex009.py  ex010.py  ex011.py  ex012.py  ex013.py
passo_a_passo/: python_projetos.docx
tests/: __init__.py  test_ex001.py  test_ex002.py  test_ex003.py  test_ex004.py  test_ex005.py  test_ex006.py  test_ex007.py  test_ex008.py  test_ex009.py  test_ex010.py  test_ex011.py  test_ex012.py  test_ex013.py
